--- a/package.json
+++ b/package.json
@@ -3,21 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.1",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "react-particles": "^2.3.1",
-    "react-particles-js": "^3.6.0",
-    "react-router-dom": "^6.4.0",
-    "react-scripts": "5.0.1",
-    "tsparticles": "^2.3.1",
-    "typewriter-effect": "^2.19.0",
-    "web-vitals": "^2.1.4"
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1",
+    "react-github-calendar": "^2.0.2",
+    "react-icons": "^4.2.0",
+    "react-parallax-tilt": "^1.4.68",
+    "react-particles-js": "^3.4.1",
+    "react-pdf": "^5.4.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.1",
+    "typewriter-effect": "^2.17.0",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
