--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://portfolio.github.io",
+  "homepage": "http://kristopherluo.github.io/Portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
