--- a/package.json
+++ b/package.json
@@ -9,24 +9,26 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.4.0",
-    "react-dom": "^17.0.1",
-    "react-github-calendar": "^2.0.2",
+    "react-dom": "^17.0.2",
+    "react-github-calendar": "^3.0.0",
     "react-icons": "^4.2.0",
     "react-parallax-tilt": "^1.4.68",
-    "react-particles-js": "^3.4.1",
     "react-pdf": "^5.4.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^2.11.0",
+    "tsparticles-slim": "^2.12.0",
     "typewriter-effect": "^2.17.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -49,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^3.2.3"
   }
 }
